08Feb99========================================================================
1. added a $SIG{ALRM} in the client to actually catch the alarm when it goes 
off which means that the netrom/ax25 call programs terminate properly (and not
loop as fast as their little legs can paddle, soaking up CPU time).
2. Implemented read receipts as an especial request from G4PDQ.
3. Fiddled with DXUser a bit to see whether I can stop it core dumping on new
users in PC16s on his machine.
30Jan99========================================================================
1. Some of the dates we get can cause crashes, tried to make it more robust (oh
and Y2K compliant)
2. PC16 seem to come in with missing callsigns from somewhere
3. added $main::data/baddx.pl which prevents callsigns that are in the list being
a) forwarded b) stored and c) (except for the originator, if local) being
displayed locally.
4. added $main::data/badmsg.pl which deletes any messages whose TO address is
in this list (this is largely for european sensibilities). 
18Jan99========================================================================
1. added present(),presentish() and disconnect() to DXCron so that you can see 
(easily) if a station is on the cluster anywhere and also disconnect them
locally. 
2. added rcmd() to DXCron so you can send an rcmd to someone else from crontab.
3. <embarrassment>Fixed create_sysop.pl so that longitude is spelt correctly
there as well</embarrassment> made the update work properly. NOTE create_sysop
will only do what you expect if all cluster.pl and client.pl programs are 
stopped.
4. DXCron wasn't reading in reliably on startup, this is now (hopefully) fixed.
the -M semantics are rather strange!
5. The -w switch is now standard on cluster.pl
6. Added last_connect() which gives the last connect time of a user (or now
if connected).
7. Added present_on(call, node) and presentish_on(ditto) which returns true if 
the call is connected to the node.